--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           class="textArea"></textarea>
         </div>
         <div class="card-footer">
+          <div>
           <button id="generate" class="btn">Generate Password</button>
+          <button class="btn" id="copy">Copy to Clipboard</button>
+          </div>
         </div>
       </div>
     </div>
